force-app/main/default/objects/SOP__c/fields/ANIssueTimeline__c.field-meta.xml
<CustomField>
    <fullName>ANIssueTimeline__c</fullName>
    <label>A/N ISSUE TIMELINE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SOPTimeline</valueSetName>
    </valueSet>
</CustomField>