force-app/main/default/objects/SOP__c/fields/ANOutput__c.field-meta.xml
<CustomField>
    <fullName>ANOutput__c</fullName>
    <defaultValue>&quot;Arrival Notice for collecting Freight Forwarding Charge&quot;</defaultValue>
    <label>A/N OUTPUT</label>
    <type>TextArea</type>
</CustomField>