force-app/main/default/objects/SOP__c/fields/BLOutput__c.field-meta.xml
<CustomField>
    <fullName>BLOutput__c</fullName>
    <defaultValue>&quot;final Original or Waybill after draft B/L confirmation by client&quot;</defaultValue>
    <label>B/L OUTPUT</label>
    <type>TextArea</type>
</CustomField>