force-app/main/default/objects/SOP__c/fields/CargoClosingTimeline__c.field-meta.xml
<CustomField>
    <fullName>CargoClosingTimeline__c</fullName>
    <label>CARGO CLOSINGTIMELINE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SOPTimeline</valueSetName>
    </valueSet>
</CustomField>