force-app/main/default/objects/SOP__c/fields/CargoDeliveryToExportCSFCY__c.field-meta.xml
<CustomField>
    <fullName>CargoDeliveryToExportCSFCY__c</fullName>
    <defaultValue>&quot;Cargo has to be arrived to CFS or CY to take the scheduled vessel&quot;</defaultValue>
    <label>CARGO DELIVERY TO EXPORT CFS/CY</label>
    <type>TextArea</type>
</CustomField>