force-app/main/default/objects/SOP__c/fields/CargoPickup__c.field-meta.xml
<CustomField>
    <fullName>CargoPickup__c</fullName>
    <defaultValue>&quot;Arrange a truck and pick up the cargo at pickup location&quot;</defaultValue>
    <label>CARGO PICKUP</label>
    <type>TextArea</type>
</CustomField>