force-app/main/default/objects/SOP__c/fields/CargoPickupTimeline__c.field-meta.xml
<CustomField>
    <fullName>CargoPickupTimeline__c</fullName>
    <label>CARGO PICKUP TIMELINE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SOPTimeline</valueSetName>
    </valueSet>
</CustomField>