force-app/main/default/objects/SOP__c/fields/CCApplicationSubmitTimeline__c.field-meta.xml
<CustomField>
    <fullName>CCApplicationSubmitTimeline__c</fullName>
    <label>C/C APPLICATION SUBMIT TIMELINE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SOPTimeline</valueSetName>
    </valueSet>
</CustomField>