force-app/main/default/objects/SOP__c/fields/COApplicationOutput__c.field-meta.xml
<CustomField>
    <fullName>COApplicationOutput__c</fullName>
    <defaultValue>&quot;Document C/O Application Form and submit to C/O Government Office&quot;</defaultValue>
    <label>C/O APPLICATION OUTPUT</label>
    <type>TextArea</type>
</CustomField>