force-app/main/default/objects/SOP__c/fields/ContainerLoadPlan__c.field-meta.xml
<CustomField>
    <fullName>ContainerLoadPlan__c</fullName>
    <defaultValue>&quot;Container Load Plan to load LCL cargo into a container&quot;</defaultValue>
    <label>CONTAINER LOAD PLAN</label>
    <type>TextArea</type>
</CustomField>