force-app/main/default/objects/SOP__c/fields/ContainerLoadPlanIssueTimeline__c.field-meta.xml
<CustomField>
    <fullName>ContainerLoadPlanIssueTimeline__c</fullName>
    <label>CONTAINER LOAD PLAN ISSUE TIMELINE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SOPTimeline</valueSetName>
    </valueSet>
</CustomField>