force-app/main/default/objects/SOP__c/fields/COOutputTimeline__c.field-meta.xml
<CustomField>
    <fullName>COOutputTimeline__c</fullName>
    <label>C/O OUTPUT TIMELINE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SOPTimeline</valueSetName>
    </valueSet>
</CustomField>