force-app/main/default/objects/SOP__c/fields/CustomsClearanceApplicationOutput__c.field-meta.xml
<CustomField>
    <fullName>CustomsClearanceApplicationOutput__c</fullName>
    <defaultValue>&quot;Document Customs Clearance Application Form and submit to Customs Office&quot;</defaultValue>
    <label>CUSTOMS CLEARANCE APPLICATION OUTPUT</label>
    <type>TextArea</type>
</CustomField>