force-app/main/default/objects/SOP__c/fields/CustomsClearancePermitInput__c.field-meta.xml
<CustomField>
    <fullName>CustomsClearancePermitInput__c</fullName>
    <defaultValue>&quot;Receive the document for Customs Clearance Permit&quot;</defaultValue>
    <label>CUSTOMS CLEARANCE PERMIT INPUT</label>
    <type>TextArea</type>
</CustomField>