force-app/main/default/objects/SOP__c/fields/CustomsClearancePermitTimeline__c.field-meta.xml
<CustomField>
    <fullName>CustomsClearancePermitTimeline__c</fullName>
    <label>CUSTOMS CLEARANCE PERMIT TIMELINE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SOPTimeline</valueSetName>
    </valueSet>
</CustomField>