force-app/main/default/objects/SOP__c/fields/DOOutput__c.field-meta.xml
<CustomField>
    <fullName>DOOutput__c</fullName>
    <defaultValue>&quot;Delivery Order to notify cargo is ready for release to the client&quot;</defaultValue>
    <label>D/O OUTPUT</label>
    <type>TextArea</type>
</CustomField>