force-app/main/default/objects/SOP__c/fields/DraftBLIssueTimeline__c.field-meta.xml
<CustomField>
    <fullName>DraftBLIssueTimeline__c</fullName>
    <label>DRAFT B/L ISSUE TIMELINE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SOPTimeline</valueSetName>
    </valueSet>
</CustomField>