force-app/main/default/objects/SOP__c/fields/DraftBLOutput__c.field-meta.xml
<CustomField>
    <fullName>DraftBLOutput__c</fullName>
    <defaultValue>&quot;Draft B/L for client checking&quot;</defaultValue>
    <label>DRAFT B/L OUTPUT</label>
    <type>TextArea</type>
</CustomField>