force-app/main/default/objects/SOP__c/fields/ManifestIssueTimeline__c.field-meta.xml
<CustomField>
    <fullName>ManifestIssueTimeline__c</fullName>
    <label>MANIFEST ISSUE TIMELINE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SOPTimeline</valueSetName>
    </valueSet>
</CustomField>