force-app/main/default/objects/SOP__c/fields/ParterDNOutput__c.field-meta.xml
<CustomField>
    <fullName>ParterDNOutput__c</fullName>
    <defaultValue>&quot;Debit Note toward oversea partner to collect charges&quot;</defaultValue>
    <label>PARTNER D/N OUTPUT</label>
    <type>TextArea</type>
</CustomField>