force-app/main/default/objects/SOP__c/fields/PartnerDNIssueTimeline__c.field-meta.xml
<CustomField>
    <fullName>PartnerDNIssueTimeline__c</fullName>
    <label>PARTNER D/N ISSUE TIMELINE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SOPTimeline</valueSetName>
    </valueSet>
</CustomField>