force-app/main/default/objects/SOP__c/fields/PhytosanitaryApplicationOutput__c.field-meta.xml
<CustomField>
    <fullName>PhytosanitaryApplicationOutput__c</fullName>
    <defaultValue>&quot;Document Phytosanitary Application Form for customs clearance in import country&quot;</defaultValue>
    <label>PHYTOSANITARY APPLICATION OUTPUT</label>
    <type>TextArea</type>
</CustomField>