force-app/main/default/objects/SOP__c/fields/PhytosanitaryApplicationTimeline__c.field-meta.xml
<CustomField>
    <fullName>PhytosanitaryApplicationTimeline__c</fullName>
    <label>PHYTOSANITARY APPLICATION ISSUE TIMELINE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SOPTimeline</valueSetName>
    </valueSet>
</CustomField>