force-app/main/default/objects/SOP__c/fields/PrealertOutput__c.field-meta.xml
<CustomField>
    <fullName>PrealertOutput__c</fullName>
    <defaultValue>&quot;Send Pre-Alert to oversea partner to notify cargo and shipping detail&quot;</defaultValue>
    <label>PREALERT OUTPUT</label>
    <type>TextArea</type>
</CustomField>