force-app/main/default/objects/SOP__c/fields/ProformaInvoiceIssueTimeline__c.field-meta.xml
<CustomField>
    <fullName>ProformaInvoiceIssueTimeline__c</fullName>
    <label>PROFORMA(DRAFT) INVOICE ISSUE TIMELINE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SOPTimeline</valueSetName>
    </valueSet>
</CustomField>