force-app/main/default/objects/SOP__c/fields/PromormaInvoiceOutput__c.field-meta.xml
<CustomField>
    <fullName>PromormaInvoiceOutput__c</fullName>
    <defaultValue>&quot;Proforma Invoice for Client Checking&quot;</defaultValue>
    <label>PROFORMA(DRAFT) INVOICE OUTPUT</label>
    <type>TextArea</type>
</CustomField>