force-app/main/default/objects/SOP__c/fields/ShippingOrderDocumentClosingDate__c.field-meta.xml
<CustomField>
    <fullName>ShippingOrderDocumentClosingDate__c</fullName>
    <label>SHIPPING ORDER DOCUMENT CLOSING DATE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SOPTimeline</valueSetName>
    </valueSet>
</CustomField>