force-app/main/default/objects/SOP__c/fields/ShippingOrderFromCustomerInput__c.field-meta.xml
<CustomField>
    <fullName>ShippingOrderFromCustomerInput__c</fullName>
    <defaultValue>&quot;Shipping Order Document Receiving from customer&quot;</defaultValue>
    <label>SHIPPING ORDER FROM CUSTOMER-INPUT</label>
    <type>TextArea</type>
</CustomField>