force-app/main/default/objects/SOP__c/fields/SOPCategory__c.field-meta.xml
<CustomField>
    <fullName>SOPCategory__c</fullName>
    <label>SOP CATEGORY</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SOPCategory</valueSetName>
    </valueSet>
</CustomField>