force-app/main/default/objects/SOP__c/recordTypes/ConsolidationExport.recordType-meta.xml
<RecordType>
    <fullName>ConsolidationExport</fullName>
    <active>true</active>
    <description>Record type to manage Standard Operation Process and Timeline of Consolidation Export.</description>
    <label>Consolidation Export</label>
</RecordType>