force-app/main/default/objects/SOP__c/recordTypes/ConsolidationImport.recordType-meta.xml
<RecordType>
    <fullName>ConsolidationImport</fullName>
    <active>true</active>
    <description>Record type to manage Standard Operation Process and Timeline of Consolidation Import.</description>
    <label>Consolidation Import</label>
</RecordType>