force-app/main/default/objects/SOP__c/recordTypes/CrossBoarder.recordType-meta.xml
<RecordType>
    <fullName>CrossBoarder</fullName>
    <active>true</active>
    <description>Record type to manage Standard Operation Process and Timeline of Cross-Boarder business involving more than 3 countries.</description>
    <label>Cross Boarder</label>
</RecordType>