force-app/main/default/objects/SOP__c/recordTypes/DomesticTransportation.recordType-meta.xml
<RecordType>
    <fullName>DomesticTransportation</fullName>
    <active>true</active>
    <description>Record type to manage Standard Operation Process and Timeline of Local Domestic Transportation in domestic.</description>
    <label>Domestic Transportation</label>
</RecordType>