force-app/main/default/objects/SOP__c/recordTypes/FreightForwardingExport.recordType-meta.xml
<RecordType>
    <fullName>FreightForwardingExport</fullName>
    <active>true</active>
    <description>Record type to manage Standard Operation Process and Timeline of freight forwarding export involving 2 countries.</description>
    <label>Freight Forwarding Export</label>
</RecordType>