force-app/main/default/objects/SOP__c/recordTypes/FreightForwardingImport.recordType-meta.xml
<RecordType>
    <fullName>FreightForwardingImport</fullName>
    <active>true</active>
    <description>Record type to manage Standard Operation Process and Timeline of freight forwarding Import involving 2 countries.</description>
    <label>Freight Forwarding Import</label>
</RecordType>